showing aligns correctly with left and right nav

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -15,6 +15,15 @@
 .showing {
   text-align: center;
   color: #454545;
+  width: 100px;
+}
+
+.nav {
+  width: 100px;
+}
+
+.right_nav {
+  text-align: right;
 }
 
 .pagination_wrapper {
